unpackaged/main/default/objects/Resource_Absence_Event__e/Resource_Absence_Event__e.object-meta.xml
<CustomObject>
    <label>Resource Absence Event</label>
    <pluralLabel>Resource Absence Events</pluralLabel>
</CustomObject>