unpackaged/main/default/objects/Resource_Absence_Event__e/fields/Gantt_Label__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Label__c</fullName>
    <label>Gantt Label</label>
    <length>225</length>
    <type>Text</type>
</CustomField>