unpackaged/main/default/objects/Resource_Absence_Event__e/fields/Longtitude__c.field-meta.xml
<CustomField>
    <fullName>Longtitude__c</fullName>
    <label>Longtitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>