unpackaged/main/default/objects/Resource_Absence_Event__e/fields/Resource_Absense_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Absense_Id__c</fullName>
    <label>Resource Absense Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>